[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/CommonUI/CommonButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/UI/LanguagePanel.gd" type="Script" id=2]
[ext_resource path="res://UI/CommonUI/CommonItemList.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/CommonUI/CommonBG1.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/CommonUI/CommonBlurBG.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/CommonUI/CommonLabel31.tscn" type="PackedScene" id=6]

[node name="LanguagePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="commonBlurBG1" parent="." instance=ExtResource( 5 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="commonLabel31Title" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 42.0
margin_right = 100.0
margin_bottom = 86.0
grow_horizontal = 2
text = "Title"
align = 1

[node name="commonButtonOK" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -268.0
margin_top = -55.0
margin_right = -148.0
margin_bottom = -26.0
text = "OK"

[node name="commonButtonCancel" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -134.0
margin_top = -55.0
margin_right = -14.0
margin_bottom = -26.0
text = "Cancel"

[node name="commonBG1BG1" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -216.0
margin_right = 384.0
margin_bottom = 216.0
grow_horizontal = 2

[node name="commonItemList1" parent="commonBG1BG1" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = 150.0

[connection signal="pressed" from="commonButtonOK" to="." method="_on_commonButtonOK_pressed"]
[connection signal="pressed" from="commonButtonCancel" to="." method="_on_commonButtonCancel_pressed"]
[connection signal="item_selected" from="commonBG1BG1/commonItemList1" to="." method="_on_commonItemList1_item_selected"]
